examples/deployments/01-simple-spring-boot-tracing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-spring-boot-tracing
  labels:
    name: simple-spring-boot-tracing
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: simple-spring-boot-tracing
  type: ClusterIP
