examples/deployments/01-simple-spring-boot-tracing/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simple-spring-boot-tracing
spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/tracer`)
    kind: Rule
    services:
    - name: simple-spring-boot-tracing
      port: 8080
    middlewares:
    - name: tracer-stripprefix
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: tracer-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /tracer
